# wi-cli

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  events.rs  main.rs  results_state.rs  ui.rs
config/: Cargo.toml
config/src/: config.rs  git.rs  lib.rs  sources.rs
search/: Cargo.toml
search/src/: lib.rs
sources/: Cargo.toml
sources/src/: git.rs  lib.rs
src/: cli.rs  config.rs  main.rs  search.rs  sources.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
