[package]
name = "wi-cli"
version = "0.1.0"
authors = ["Filipe Rainho <filipe.rainho@xing.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
structopt = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5"
