[package]
name = "cli"
version = "0.1.0"
authors = ["Filipe Rainho <filipenrainho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
structopt = "0.3.21"
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
config = { path = "../config" }
search = { path = "../search" }
