[package]
name = "config"
version = "0.1.0"
authors = ["Filipe Rainho <filipenrainho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
home = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.1"

[dev-dependencies]
tempfile = "3.2.0"
test_utils = { path = "../test_utils" }
