[package]
name = "search"
version = "0.1.0"
authors = ["Filipe Rainho <filipenrainho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
jwalk = "0.6.0"
anyhow = "1.0.38"
config = { path = "../config" }

[dev-dependencies]
tempfile = "3.2.0"
test_utils = { path = "../test_utils" }
