[package]
name = "sources"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5"
url = "2.2.1"
anyhow = "1.0.38"
config = { path = "../config"}

[dev-dependencies]
test_utils = { path = "../test_utils"}
